--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "changed-lines-number-action",
   "version": "1.0.3",
   "private": true,
-  "description": "Displays the number of changed lines considering `.gitattributes`.",
+  "description": "Add the number of changed lines to the PR body, considering `.gitattributes`.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
