--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changed-lines-number-action",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "private": true,
   "description": "Add the number of changed lines to the PR body, considering `.gitattributes`.",
   "main": "lib/main.js",
@@ -27,10 +27,12 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
+    "markdown-table": "^3.0.2",
     "picomatch": "^2.3.1"
   },
   "devDependencies": {
     "@jest/globals": "^28.1.2",
+    "@types/markdown-table": "^3.0.0",
     "@types/node": "^16.11.41",
     "@types/picomatch": "^2.3.0",
     "@typescript-eslint/parser": "^5.30.0",
