--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,5 +10,5 @@ updates:
     schedule:
       interval: weekly
     ignore:
-      - dependency-name: "@types.node"
+      - dependency-name: "@types/node"
         update-types: ["version-update:semver-major"]
