--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/node": "^16.18.58",
+    "@types/node": "20.x",
     "@types/picomatch": "^2.3.1",
     "@typescript-eslint/parser": "^6.7.5",
     "@vercel/ncc": "^0.36.1",
@@ -46,6 +46,6 @@
     "typescript": "^5.2.2"
   },
   "volta": {
-    "node": "16.15.1"
+    "node": "20.8.1"
   }
 }
