--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@jest/globals": "^29.7.0",
     "@types/node": "~20.14.9",
     "@types/picomatch": "^2.3.4",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-github": "^4.10.1",
-    "eslint-plugin-jest": "^28.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-github": "^5.0.1",
+    "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "3.3.2",
@@ -47,5 +47,6 @@
   },
   "volta": {
     "node": "20.8.1"
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
