--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,17 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
+      - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: pnpm install
+          node-version-file: "package.json"
+          cache: pnpm
       - run: |
+          pnpm install
           pnpm run all
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
